--- a/readme.html
+++ b/readme.html
@@ -25,6 +25,27 @@
           </ul>
         </ul>
       </p>
+    <h2>Port Information</h2>
+    <p>
+        The app uses HTTP/ HTTPS protocol for communicating with the Defender ATP server. Below are the default ports used by Splunk SOAR.
+        <table>
+            <tr class=plain>
+                <th>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Service Name</th>
+                <th>Transport Protocol</th>
+                <th>Port</th>
+            </tr>
+            <tr>
+                <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;http</td>
+                <td>tcp</td>
+                <td>80</td>
+            </tr>
+            <tr>
+                <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;https</td>
+                <td>tcp</td>
+                <td>443</td>
+            </tr>
+        </table>
+    </p>
 
     <h2>Pagination Not Supported</h2>
       <p>
