--- a/release_notes/release_notes.html
+++ b/release_notes/release_notes.html
@@ -1,5 +1,9 @@
-<b>Windows Defender ATP Release Notes - Published by Splunk August 10, 2021</b>
+<b>Windows Defender ATP Release Notes - Published by Splunk December 28, 2021</b>
 <br><br>
+<b>Version 3.5.2 - Released December 28, 2021</b>
+<ul>
+<li>Removed 'pyc' files from the app tarball</li>
+</ul>
 <b>Version 3.2.0 - Released August 10, 2021</b>
 <ul>
 <li>Implemented a custom view for the 'list alerts' action [PAPP-18400]</li>
