PAPP-24378 more documentation updates

--- a/readme.html
+++ b/readme.html
@@ -117,6 +117,7 @@
                 </ul>
               <li><b>Delegated Permissions</b></li>
                 <ul>
+                  <li>AdvancedQuery.Read</li>
                   <li>Alert.ReadWrite</li>
                   <li>File.Read.All</li>
                   <li>Ip.Read.All</li>
@@ -133,7 +134,6 @@
                   <li>Ti.ReadWrite</li>
                   <li>Url.Read.All</li>
                   <li>User.Read.All</li>
-                  <li>AdvancedQuery.Read</li>
                   <li>Vulnerability.Read</li>
                 </ul>
             </ul>
@@ -168,9 +168,9 @@
           <li>Check the checkbox if you want to use Non Interactive authentication mechanism otherwise Interactive auth mechanism will be used.</li>
           <li>Provide the client ID of the app created during the previous step of app creation in the 'Client ID' field.</li>
           <li>Provide the client secret of the app created during the previous step of app creation in the 'Client Secret' field.</li>
-          <li>Provide the tenant ID of the app created during the previous step of SIEM Integration in the 'Tenant ID' field. For getting the value of tenant ID, navigate to the 'Azure Active Directory' on the Microsoft Azure portal; click on the 'App registrations' menu from the left-side panel; click on the earlier created 'WindowsDefenderATPSiemConnector' app. The value displayed in the 'Directory (tenant) ID' is the required tenant ID.</li>
+          <li>Provide the tenant ID of the app created during the previous step of Azure app creation in the 'Tenant ID' field. For getting the value of tenant ID, navigate to the 'Azure Active Directory' on the Microsoft Azure portal; click on the 'App registrations' menu from the left-side panel; click on the earlier created app. The value displayed in the 'Directory (tenant) ID' is the required tenant ID.</li>
           <li>Save the asset with the above values.</li>
-          <li>After saving the asset, a new uneditable field will appear in the 'Asset Settings' tab of the configured asset for the ATP app on Phantom. Copy the URL mentioned in the 'POST incoming for Windows Defender ATP to this location' field. Add a suffix '/result' to the URL copied in the previous step. The resulting URL looks like the one mentioned below.</li>
+          <li>After saving the asset, a new uneditable field will appear in the 'Asset Settings' tab of the configured asset for the ATP app on SOAR. Copy the URL mentioned in the 'POST incoming for Windows Defender ATP to this location' field. Add a suffix '/result' to the URL copied in the previous step. The resulting URL looks like the one mentioned below.</li>
           <pre>
             https://&lt;soar_host&gt;/rest/handler/windowsdefenderatp_&lt;appid&gt;/&lt;asset_name&gt;/result
           </pre>
@@ -193,7 +193,7 @@
         <ul>
           <li>After setting up the asset and user, click the 'TEST CONNECTIVITY' button. A pop-up window will be displayed with appropriate test connectivity logs. It will also display a specific URL on that pop-up window.</li>
           <li>Open this URL in a separate browser tab. This new tab will redirect to the Microsoft login page to complete the login process to grant the permissions to the app.</li>
-          <li>Log in using the same Microsoft account that was used to configure the SIEM connector workflow and the application on the Microsoft Azure Portal. After logging in, review the requested permissions listed and click on the 'Accept' button.</li>
+          <li>Log in using the same Microsoft account that was used to configure the Windows Defender ATP workflow and the application on the Microsoft Azure Portal. After logging in, review the requested permissions listed and click on the 'Accept' button.</li>
           <li>This will display a successful message of 'Code received. Please close this window, the action will continue to get new token.' on the browser tab.</li>
           <li>Finally, close the browser tab and come back to the 'Test Connectivity' browser tab. The pop-up window should display a 'Test Connectivity Passed' message.</li>
         </ul>
