PAPP-24378 more updates

--- a/readme.html
+++ b/readme.html
@@ -183,6 +183,7 @@
               <li>Navigate to the 'Authentication' menu of the app on the left-side panel.</li>
               <li>Click on the 'Add a platform' button and select 'Web' from the displayed options.</li>
               <li>Enter the URL created in the earlier section in the 'Redirect URIs' text-box.</li>
+              <li>Select the 'ID tokens' checkbox and click 'Save'.</li>
               <li>This will display the 'Redirect URIs' under the 'Web' section displayed on the page.</li>
             </ol>
         </ul>
