--- a/readme.html
+++ b/readme.html
@@ -80,7 +80,7 @@
     <h2>Configure and set up permissions of the app created on the Microsoft Azure portal</h2>
       <p>
         <ul>
-          <h3>Create the app</h3>
+          <h4>Create the app</h4>
           <ol>
           <li>Navigate to <a href="https://portal.azure.com" target="_blank">https://portal.azure.com</a>.</li>
           <li>Log in with a user that has permission to create an app in the Azure Active Directory (AAD).</li>
@@ -89,8 +89,8 @@
           <li>Select the 'New Registration' option at the top of the page.</li>
           <li>In the registration form, choose a name for your application and then click 'Register'.</li>
           </ol>
-          <h3>Add permissions</h3>
-          <ol>
+          <h4>Add permissions</h4>
+          <ol start=7>
           <li>Select the 'API Permissions' menu from the left-side panel.</li>
           <li>Click on 'Add a permission'.</li>
           <li>Under the 'Select an API' section, select 'APIs my organization uses'.</li>
@@ -154,15 +154,15 @@
             </ul>
           </li>
           </ol>
-          <h3>Create a client secret</h3>
-          <ol>
+          <h4>Create a client secret</h4>
+          <ol start=17>
           <li>Select the 'Certificates &amp; secrets' menu from the left-side panel.</li>
           <li>Select 'New client secret' button to open a pop-up window.</li>
           <li>Provide the description, select an appropriate option for deciding the client secret expiration time, and click on the 'Add' button.</li>
           <li>Click 'Copy to clipboard' to copy the generated secret value and paste it in a safe place. You will need it to configure the asset and will not be able to retrieve it later.</li>
           </ol>
-          <h3>Copy your application id and tenant id</h3>
-          <ol>
+          <h4>Copy your application id and tenant id</h4>
+          <ol start=21>
           <li>Select the 'Overview' menu from the left-side panel.</li>
           <li>Copy the <b>Application (client) ID</b> and <b>Directory (tenant) ID</b>. You will need these to configure the SOAR asset.
           </ol>
@@ -316,6 +316,6 @@
       </ul>
     </p>
 
-<h3>The app is configured and ready to be used now.</h3>
+<h4>The app is configured and ready to be used now.</h4>
 </body>
 </html>
