PAPP-24378 doc correction

--- a/readme.html
+++ b/readme.html
@@ -169,7 +169,7 @@
         </ul>
       </p>
 
-    <h2>Configure the Microsoft Defender ATP SOAR app's asset</h2>
+    <h2>Configure the Windows Defender ATP SOAR app's asset</h2>
       <p>
         When creating an asset for the app,
         <ul>
