--- a/readme.html
+++ b/readme.html
@@ -73,6 +73,7 @@
           <li>Tenant ID - It is the Directory ID of the Microsoft Azure Active Directory on the Microsoft Azure portal.</li>
           <li>Client ID - It is the Application ID of an application configured in the Microsoft Azure Active Directory.</li>
           <li>Client Secret - It is the secret string used by the application to prove its identity when requesting a token. It can be generated for the configured application on the Microsoft Azure Active Directory.</li>
+          <li>Environment - Cloud services are provided by Azure and used for connect with Public, Government Community Cloud (GCC) or GCC High Azure cloud services.</li>
           <li>Non Interactive Auth - It is used to determine the authentication method. If it is checked then non interactive auth will be used otherwise interactive auth will be used. Whenever this checkbox is toggled then the test connectivity action must be run again.</li>
         </ul>
       </p>
