--- a/microsoftdefenderforendpoint_update_alert.html
+++ b/microsoftdefenderforendpoint_update_alert.html
@@ -9,7 +9,7 @@
 
 {% block widget_content %} <!-- Main Start Block -->
 
-<!-- File: windowsdefenderatp_get_alert.html
+<!-- File: microsoftdefenderforendpoint_update_alert.html
   Copyright (c) 2019-2024 Splunk Inc.
   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
@@ -110,6 +110,36 @@
                     </td>
                 </tr>
             {% endif %}
+            {% if result.param.status %}
+                <tr>
+                    <td>Status</td>
+                    <td>{{ result.param.status }}</td>
+                </tr>
+            {%endif%}
+            {% if result.param.assigned_to %}
+                <tr>
+                    <td>Assigned To</td>
+                    <td>{{ result.param.assigned_to }}</td>
+                </tr>
+            {%endif%}
+            {% if result.param.classification %}
+                <tr>
+                    <td>Classification</td>
+                    <td>{{ result.param.classification }}</td>
+                </tr>
+            {%endif%}
+            {% if result.param.determination %}
+                <tr>
+                    <td>Determination</td>
+                    <td>{{ result.param.determination }}</td>
+                </tr>
+            {%endif%}
+            {% if result.param.comment %}
+                <tr>
+                    <td>Comment</td>
+                    <td>{{ result.param.comment }}</td>
+                </tr>
+            {%endif%}
         </table>
         <h3 class="wf-h3-style">Alert Info</h3>
         <div class="metadata_div">
@@ -120,27 +150,24 @@
                         <table class="wf-table-horizontal datatable">
                             <thead>
                                 <tr>
+                                    <th>Alert ID</th>
                                     <th>Title</th>
+                                    <th>Status</th>
+                                    <th>Assigned To</th>
+                                    <th>Classification</th>
+                                    <th>Determination</th>
                                     <th>Category</th>
                                     <th>Severity</th>
-                                    <th>Threat Name</th>
-                                    <th>Computer Name</th>
-                                    <th>Device ID</th>
                                 </tr>
                             </thead>
                             <tbody>
                                 {% for alert in result.data %}
                                     <tr>
-                                        <td>{{ alert.title | default:"None" }}</td>
-                                        <td>{{ alert.category | default:"None" }}</td>
-                                        <td>{{ alert.severity | default:"None" }}</td>
-                                        <td>{{ alert.threatName | default:"None" }}</td>
-                                        <td>{{ alert.computerDnsName | default:"None" }}</td>
                                         <td>
-                                            {% if alert.machineId %}
+                                            {% if alert.id %}
                                                 <a href="javascript:;"
-                                                onclick="context_menu(this, [{'contains': ['defender atp device id'], 'value': '{{ alert.machineId }}' }], 0, {{ container.id }}, null, false);">
-                                                    {{ alert.machineId }}
+                                                onclick="context_menu(this, [{'contains': ['defender atp device id'], 'value': '{{ alert.id }}' }], 0, {{ container.id }}, null, false);">
+                                                    {{ alert.id }}
                                                     &nbsp;
                                                     <span class="fa fa-caret-down" style="font-size: smaller;"></span>
                                                 </a>
@@ -148,6 +175,13 @@
                                                 None
                                             {% endif %}
                                         </td>
+                                        <td>{{ alert.title | default:"None" }}</td>
+                                        <td>{{ alert.status | default:"None" }}</td>
+                                        <td>{{ alert.assignedTo | default:"None" }}</td>
+                                        <td>{{ alert.classification | default:"None" }}</td>
+                                        <td>{{ alert.determination | default:"None" }}</td>
+                                        <td>{{ alert.category | default:"None" }}</td>
+                                        <td>{{ alert.severity | default:"None" }}</td>
                                     </tr>
                                 {% endfor %}
                             </tbody>
