chore(ci): workflow updates and pre-commit changes and configurations added and applied
[batch update]

--- a/microsoftdefenderforendpoint_run_script.html
+++ b/microsoftdefenderforendpoint_run_script.html
@@ -1,10 +1,9 @@
 {% extends 'widgets/widget_template.html' %}
 {% load custom_template %}
-
-{% block widget_content %} <!-- Main Start Block -->
-
-<!-- File: microsoftdefenderforendpoint_run_script.html
-  Copyright (c) 2019-2024 Splunk Inc.
+{% block widget_content %}
+  <!-- Main Start Block -->
+  <!-- File: microsoftdefenderforendpoint_run_script.html
+  Copyright (c) 2019-2025 Splunk Inc.
   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at
@@ -16,9 +15,7 @@
   either express or implied. See the License for the specific language governing permissions
   and limitations under the License.
 -->
-
   <style>
-
     .output {
       font-family: Consolas,"courier new",monospace;
       background-color: black;
@@ -37,28 +34,29 @@
       display: inline-block;
     }
 
-    </style>
-  <div class="output"> <!-- Main Div -->
-  {% for result in results %} <!-- loop for each result -->
-    {% if  result.summary.event_id %}
-    <h5>Event ID:</h5>
-    <a href="javascript:;"
-        onclick="context_menu(this, [{'contains': ['defender atp event id'], 'value': '{{ result.summary.event_id }}' }], 0, {{ container.id }}, null, false);">
+  </style>
+  <div class="output">
+    <!-- Main Div -->
+    {% for result in results %}
+      <!-- loop for each result -->
+      {% if  result.summary.event_id %}
+        <h5>Event ID:</h5>
+        <a href="javascript:;"
+           onclick="context_menu(this, [{'contains': ['defender atp event id'], 'value': '{{ result.summary.event_id }}' }], 0, {{ container.id }}, null, false);">
         {{ result.summary.event_id }}&nbsp;<span class="fa fa-caret-down" style="font-size: smaller;"></span></a>
-    {% endif %}
-
-    {% if not result.data %}
-            <h4 class="wf-h4-style">No data found</h4>
-    {% else %}
+      {% endif %}
+      {% if not result.data %}
+        <h4 class="wf-h4-style">No data found</h4>
+      {% else %}
         {% for data in result.data %}
-            <h5>Script Output:</h5>
-            <pre>{{ data.script_output}}</pre>
-            {% if  data.script_errors %}
+          <h5>Script Output:</h5>
+          <pre>{{ data.script_output}}</pre>
+          {% if  data.script_errors %}
             <h5>Script Errors:</h5>
             <pre>{{ data.script_errors}}</pre>
-            {% endif %}
+          {% endif %}
         {% endfor %}
-    {% endif %}
- {% endfor %}
+      {% endif %}
+    {% endfor %}
   </div>
 {% endblock %}
