--- a/microsoftdefenderforendpoint_get_devices.html
+++ b/microsoftdefenderforendpoint_get_devices.html
@@ -1,16 +1,17 @@
 {% extends 'widgets/widget_template.html' %}
 {% load custom_template %}
-
-{% block custom_title_prop %}{% if title_logo %}style="background-size: auto 60%; background-position: 50%; background-repeat: no-repeat; background-image: url('/app_resource/{{ title_logo }}');"{% endif %}{% endblock %}
+{% block custom_title_prop %}
+  {% if title_logo %}
+    style="background-size: auto 60%; background-position: 50%; background-repeat: no-repeat; background-image: url('/app_resource/{{ title_logo }}');"
+  {% endif %}
+{% endblock %}
 {% block title1 %}{{ title1 }}{% endblock %}
 {% block title2 %}{{ title2 }}{% endblock %}
-{% block custom_tools %}
-{% endblock %}
-
-{% block widget_content %} <!-- Main Start Block -->
-
-<!-- File: microsoftdefenderforendpoint_get_devices.html
-  Copyright (c) 2019-2024 Splunk Inc.
+{% block custom_tools %}{% endblock %}
+{% block widget_content %}
+  <!-- Main Start Block -->
+  <!-- File: microsoftdefenderforendpoint_get_devices.html
+  Copyright (c) 2019-2025 Splunk Inc.
   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at
@@ -22,9 +23,7 @@
   either express or implied. See the License for the specific language governing permissions
   and limitations under the License.
 -->
-
-<style>
-
+  <style>
     .windowsdefenderatp a:hover {
         text-decoration:underline;
     }
@@ -86,117 +85,123 @@
         white-space:nowrap;
     }
 
-</style>
-<div class="windowsdefenderatp" style="overflow: auto; width: 100%; height: 100%; padding-left:10px; padding-right:10px"> <!-- Main Div -->
-    {% for result in results %} <!-- loop for each result -->
-    <br>
-
-    <!------------------- For each Result ---------------------->
-    {% if not result.data %}
+  </style>
+  <div class="windowsdefenderatp"
+       style="overflow: auto;
+              width: 100%;
+              height: 100%;
+              padding-left:10px;
+              padding-right:10px">
+    <!-- Main Div -->
+    {% for result in results %}
+      <!-- loop for each result -->
+      <br>
+      <!------------------- For each Result ---------------------->
+      {% if not result.data %}
         <h4 class="wf-h4-style">No data found</h4>
-
-    {% else %}
+      {% else %}
         <h3 class="wf-h3-style">Action Parameters</h3>
         <table class="wf-table-vertical">
-            <tr>
-                {% if result.param.file_hash %}
-                    <td>File Hash</td>
-                    <td><a href="javascript:;"
-                        onclick="context_menu(this, [{'contains': ['sha1'], 'value': '{{ result.param.file_hash }}' }], 0, {{ container.id }}, null, false);">
-                        {{ result.param.file_hash }}
-                        &nbsp;
-                        <span class="fa fa-caret-down" style="font-size: smaller;"></span>
-                        </a>
-                    </td>
-                {% elif result.param.user_id %}
-                    <td>User ID</td>
-                    <td><a href="javascript:;"
-                        onclick="context_menu(this, [{'contains': ['user name'], 'value': '{{ result.param.user_id }}' }], 0, {{ container.id }}, null, false);">
-                        {{ result.param.user_id }}
-                        &nbsp;
-                        <span class="fa fa-caret-down" style="font-size: smaller;"></span>
-                        </a>
-                    </td>
-                {% elif result.param.domain %}
-                    <td>Domain</td>
-                    <td><a href="javascript:;"
-                        onclick="context_menu(this, [{'contains': ['domain'], 'value': '{{ result.param.domain }}' }], 0, {{ container.id }}, null, false);">
-                        {{ result.param.domain }}
-                        &nbsp;
-                        <span class="fa fa-caret-down" style="font-size: smaller;"></span>
-                        </a>
-                    </td>
-                {% else %}
-                    <td>
-                        <a style="font-weight: normal;">
-                        Param in the result did not match with available values
-                        </a>
-                    </td>
-                {% endif %}
-            </tr>
+          <tr>
+            {% if result.param.file_hash %}
+              <td>File Hash</td>
+              <td>
+                <a href="javascript:;"
+                   onclick="context_menu(this, [{'contains': ['sha1'], 'value': '{{ result.param.file_hash }}' }], 0, {{ container.id }}, null, false);">
+                  {{ result.param.file_hash }}
+                  &nbsp;
+                  <span class="fa fa-caret-down" style="font-size: smaller;"></span>
+                </a>
+              </td>
+            {% elif result.param.user_id %}
+              <td>User ID</td>
+              <td>
+                <a href="javascript:;"
+                   onclick="context_menu(this, [{'contains': ['user name'], 'value': '{{ result.param.user_id }}' }], 0, {{ container.id }}, null, false);">
+                  {{ result.param.user_id }}
+                  &nbsp;
+                  <span class="fa fa-caret-down" style="font-size: smaller;"></span>
+                </a>
+              </td>
+            {% elif result.param.domain %}
+              <td>Domain</td>
+              <td>
+                <a href="javascript:;"
+                   onclick="context_menu(this, [{'contains': ['domain'], 'value': '{{ result.param.domain }}' }], 0, {{ container.id }}, null, false);">
+                  {{ result.param.domain }}
+                  &nbsp;
+                  <span class="fa fa-caret-down" style="font-size: smaller;"></span>
+                </a>
+              </td>
+            {% else %}
+              <td>
+                <a style="font-weight: normal;">Param in the result did not match with available values</a>
+              </td>
+            {% endif %}
+          </tr>
         </table>
         <h3 class="wf-h3-style">Device Info</h3>
         <div class="metadata_div">
-            <!--Default View-->
-            <div class="panel-group" id="server-information">
-                <div class="panel">
-                    <div id="default-view-table" class="panel-collapse collapse in">
-                        <table class="wf-table-horizontal datatable">
-                            <thead>
-                                <tr>
-                                    <th>Device ID</th>
-                                    <th>Health Status</th>
-                                    <th>OS</th>
-                                    <th>Computer Name</th>
-                                    <th>Last External IP address</th>
-                                    <th>Last IP Address</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                {% for device in result.data %}
-                                    <tr>
-                                        <td>
-                                            <a href="javascript:;"
-                                            onclick="context_menu(this, [{'contains': ['defender atp device id'], 'value': '{{ device.id }}' }], 0, {{ container.id }}, null, false);">
-                                                {{ device.id }}
-                                                &nbsp;
-                                                <span class="fa fa-caret-down" style="font-size: smaller;"></span>
-                                            </a>
-                                        </td>
-                                        <td>{{ device.healthStatus | default:"None" }}</td>
-                                        <td>{{ device.osPlatform | default:"None" }}</td>
-                                        <td>{{ device.computerDnsName | default:"None" }}</td>
-                                        <td>
-                                            <a href="javascript:;"
-                                            onclick="context_menu(this, [{'contains': ['ip'], 'value': '{{ device.lastExternalIpAddress }}' }], 0, {{ container.id }}, null, false);">
-                                                {{ device.lastExternalIpAddress }}
-                                                &nbsp;
-                                                <span class="fa fa-caret-down" style="font-size: smaller;"></span>
-                                            </a>
-                                        </td>
-                                        <td>
-                                            <a href="javascript:;"
-                                            onclick="context_menu(this, [{'contains': ['ip'], 'value': '{{ device.lastIpAddress }}' }], 0, {{ container.id }}, null, false);">
-                                                {{ device.lastIpAddress }}
-                                                &nbsp;
-                                                <span class="fa fa-caret-down" style="font-size: smaller;"></span>
-                                            </a>
-                                        </td>
-                                    </tr>
-                                {% endfor %}
-                            </tbody>
-                        </table>
-                    </div>
-                </div>
+          <!--Default View-->
+          <div class="panel-group" id="server-information">
+            <div class="panel">
+              <div id="default-view-table" class="panel-collapse collapse in">
+                <table class="wf-table-horizontal datatable">
+                  <thead>
+                    <tr>
+                      <th>Device ID</th>
+                      <th>Health Status</th>
+                      <th>OS</th>
+                      <th>Computer Name</th>
+                      <th>Last External IP address</th>
+                      <th>Last IP Address</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    {% for device in result.data %}
+                      <tr>
+                        <td>
+                          <a href="javascript:;"
+                             onclick="context_menu(this, [{'contains': ['defender atp device id'], 'value': '{{ device.id }}' }], 0, {{ container.id }}, null, false);">
+                            {{ device.id }}
+                            &nbsp;
+                            <span class="fa fa-caret-down" style="font-size: smaller;"></span>
+                          </a>
+                        </td>
+                        <td>{{ device.healthStatus | default:"None" }}</td>
+                        <td>{{ device.osPlatform | default:"None" }}</td>
+                        <td>{{ device.computerDnsName | default:"None" }}</td>
+                        <td>
+                          <a href="javascript:;"
+                             onclick="context_menu(this, [{'contains': ['ip'], 'value': '{{ device.lastExternalIpAddress }}' }], 0, {{ container.id }}, null, false);">
+                            {{ device.lastExternalIpAddress }}
+                            &nbsp;
+                            <span class="fa fa-caret-down" style="font-size: smaller;"></span>
+                          </a>
+                        </td>
+                        <td>
+                          <a href="javascript:;"
+                             onclick="context_menu(this, [{'contains': ['ip'], 'value': '{{ device.lastIpAddress }}' }], 0, {{ container.id }}, null, false);">
+                            {{ device.lastIpAddress }}
+                            &nbsp;
+                            <span class="fa fa-caret-down" style="font-size: smaller;"></span>
+                          </a>
+                        </td>
+                      </tr>
+                    {% endfor %}
+                  </tbody>
+                </table>
+              </div>
             </div>
+          </div>
         </div>
         <br>
-    {% endif %}
-    {% endfor %} <!-- loop for each result end -->
-</div> <!-- Main Div -->
-
-
-<script>
+      {% endif %}
+    {% endfor %}
+    <!-- loop for each result end -->
+  </div>
+  <!-- Main Div -->
+  <script>
     $.extend(true, $.fn.dataTable.defaults, {
         "searching": false,
         "bLengthChange": false,
@@ -217,5 +222,6 @@
     $('.datatable').DataTable({
         order: []
     });
-</script>
-{% endblock %} <!-- Main Start Block -->
+  </script>
+{% endblock %}
+<!-- Main Start Block -->
